--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "countries.js",
   "scripts": {
+    "start":"node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,7 +12,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.0.2",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.12",
     "os": "^0.1.1",
